ci: bump version to 1.0.5

--- a/corn/version.properties
+++ b/corn/version.properties
@@ -1,4 +1,4 @@
-#Fri Aug 11 14:59:44 PDT 2023
-VERSION_BUILD=12
-version=1.0.4
-VERSION_PATCH=4
+#Thu Jan 09 22:14:34 ICT 2025
+VERSION_BUILD=13
+version=1.0.5
+VERSION_PATCH=5
